fix(config): Optimize can be started with multiple profiles specified
relates to OPT-7345